[tool.poetry]
name = "freeway"
version = "0.0.12"
description = "Freeway is a module for managing file system structures with recursive pattern rules."
authors = ["Leandro Inocencio <cesio.arg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^24.3"
pytest = "^6.1.2"
Sphinx = "^3.3.0"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
